@@ -1,3 +1,8 @@
+2004-04-02  Don Porter  <dgp@users.sourceforge.net>
+
+        * tests/tcltest.test: Corrected constraint typos: "nonRoot" ->
+        "notRoot".  [Bug 928353]
+
 2004-03-31  Don Porter	<dgp@users.sourceforge.net>
 
 	* doc/msgcat.n: Clarified message catalog file encodings. [Bug 811457]
